Bug 158172 - [server] Need a factory to create http server on various ports